feat: Update Brewfile

--- a/private_dot_config/brew-bundle/Brewfile
+++ b/private_dot_config/brew-bundle/Brewfile
@@ -10,6 +10,7 @@ cask "blender"
 cask "clion"
 cask "guitar-pro"
 cask "hiddenbar"
+cask "keyboardholder"
 cask "maccy"
 cask "microsoft-excel"
 cask "microsoft-powerpoint"
