feat: Update Brewfile

--- a/private_dot_config/brew-bundle/Brewfile
+++ b/private_dot_config/brew-bundle/Brewfile
@@ -6,14 +6,15 @@ brew "lsd"
 brew "mas"
 brew "rustup"
 cask "anaconda"
+cask "blender"
 cask "clion"
 cask "guitar-pro"
 cask "hiddenbar"
-cask "input-source-pro"
 cask "maccy"
 cask "microsoft-excel"
 cask "microsoft-powerpoint"
 cask "microsoft-word"
+cask "notion"
 cask "pycharm"
 cask "qlmarkdown"
 cask "rustrover"
@@ -31,4 +32,4 @@ mas "Pages 文稿", id: 409201541
 mas "Steam Link", id: 1246969117
 vscode "k--kato.intellij-idea-keybindings"
 vscode "ms-ceintl.vscode-language-pack-zh-hans"
-vscode "vscodevim.vim"
+vscode "yzhang.markdown-all-in-one"
