--- a/private_dot_config/brew-bundle/Brewfile
+++ b/private_dot_config/brew-bundle/Brewfile
@@ -8,7 +8,6 @@ brew "lsd"
 brew "mas"
 brew "pandoc"
 brew "rustup"
-cask "anaconda"
 cask "blender"
 cask "chatgpt"
 cask "guitar-pro"
@@ -18,6 +17,7 @@ cask "maccy"
 cask "microsoft-excel"
 cask "microsoft-powerpoint"
 cask "microsoft-word"
+cask "miniforge"
 cask "notion"
 cask "pearcleaner"
 cask "pycharm"
