feat: Update Brewfile

--- a/private_dot_config/brew-bundle/Brewfile
+++ b/private_dot_config/brew-bundle/Brewfile
@@ -1,5 +1,8 @@
+tap "brewforge/chinese"
+tap "brewforge/extras"
 tap "homebrew/bundle"
 tap "homebrew/services"
+tap "vox/vasks"
 brew "bat"
 brew "chezmoi"
 brew "lsd"
@@ -17,10 +20,12 @@ cask "microsoft-excel"
 cask "microsoft-powerpoint"
 cask "microsoft-word"
 cask "notion"
+cask "pearcleaner"
 cask "pycharm"
 cask "qlmarkdown"
 cask "rustrover"
 cask "surge"
+cask "svstudio2-pro"
 cask "syntax-highlight"
 cask "tencent-meeting"
 cask "visual-studio-code"
