feat: Update Brewfile

--- a/private_dot_config/brew-bundle/Brewfile
+++ b/private_dot_config/brew-bundle/Brewfile
@@ -2,16 +2,15 @@ tap "brewforge/chinese"
 tap "brewforge/extras"
 tap "homebrew/bundle"
 tap "homebrew/services"
-tap "vox/vasks"
 brew "bat"
 brew "chezmoi"
 brew "lsd"
 brew "mas"
+brew "pandoc"
 brew "rustup"
 cask "anaconda"
 cask "blender"
 cask "chatgpt"
-cask "clion"
 cask "guitar-pro"
 cask "hiddenbar"
 cask "keyboardholder"
@@ -24,10 +23,12 @@ cask "pearcleaner"
 cask "pycharm"
 cask "qlmarkdown"
 cask "rustrover"
+cask "snipaste"
 cask "surge"
 cask "svstudio2-pro"
 cask "syntax-highlight"
 cask "tencent-meeting"
+cask "typora"
 cask "visual-studio-code"
 mas "Compressor", id: 424390742
 mas "Final Cut Pro", id: 424389933
@@ -40,6 +41,6 @@ mas "Pages文稿", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
 mas "Steam Link", id: 1246969117
 mas "微信", id: 836500024
+vscode "anan.jetbrains-darcula-theme"
 vscode "k--kato.intellij-idea-keybindings"
 vscode "ms-ceintl.vscode-language-pack-zh-hans"
-vscode "yzhang.markdown-all-in-one"
