feat: Update Brewfile

--- a/private_dot_config/brew-bundle/Brewfile
+++ b/private_dot_config/brew-bundle/Brewfile
@@ -12,6 +12,7 @@ cask "blender"
 cask "chatgpt"
 cask "guitar-pro"
 cask "hiddenbar"
+cask "keka"
 cask "keyboardholder"
 cask "maccy"
 cask "microsoft-excel"
@@ -25,7 +26,6 @@ cask "qlmarkdown"
 cask "rustrover"
 cask "snipaste"
 cask "surge"
-cask "svstudio2-pro"
 cask "syntax-highlight"
 cask "tencent-meeting"
 cask "typora"
