feat: Update Brewfile

--- a/private_dot_config/brew-bundle/Brewfile
+++ b/private_dot_config/brew-bundle/Brewfile
@@ -4,27 +4,24 @@ tap "homebrew/bundle"
 tap "homebrew/services"
 brew "bat"
 brew "chezmoi"
+brew "ffmpeg"
 brew "lsd"
 brew "mas"
 brew "pandoc"
+brew "pkgconf"
 brew "rustup"
+brew "telnet"
 cask "blender"
 cask "chatgpt"
 cask "guitar-pro"
 cask "hiddenbar"
-cask "keka"
 cask "keyboardholder"
 cask "maccy"
-cask "microsoft-excel"
-cask "microsoft-powerpoint"
-cask "microsoft-word"
 cask "miniforge"
-cask "notion"
 cask "pearcleaner"
 cask "pycharm"
 cask "qlmarkdown"
 cask "rustrover"
-cask "snipaste"
 cask "surge"
 cask "syntax-highlight"
 cask "tencent-meeting"
@@ -40,7 +37,6 @@ mas "Numbers表格", id: 409203825
 mas "Pages文稿", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
 mas "Steam Link", id: 1246969117
-mas "微信", id: 836500024
 vscode "anan.jetbrains-darcula-theme"
 vscode "k--kato.intellij-idea-keybindings"
 vscode "ms-ceintl.vscode-language-pack-zh-hans"
