--- a/private_dot_config/brew-bundle/Brewfile
+++ b/private_dot_config/brew-bundle/Brewfile
@@ -7,26 +7,32 @@ brew "chezmoi"
 brew "ffmpeg"
 brew "lsd"
 brew "mas"
+brew "openjdk"
 brew "pandoc"
 brew "pkgconf"
 brew "rustup"
 brew "telnet"
+brew "wget"
 cask "blender"
 cask "chatgpt"
+cask "clion"
 cask "guitar-pro"
 cask "hiddenbar"
-cask "keyboardholder"
-cask "maccy"
+cask "keka"
 cask "miniforge"
 cask "pearcleaner"
 cask "pycharm"
 cask "qlmarkdown"
+cask "qq"
+cask "rar"
 cask "rustrover"
 cask "surge"
 cask "syntax-highlight"
 cask "tencent-meeting"
 cask "typora"
 cask "visual-studio-code"
+cask "wechat"
+cask "wpsoffice-cn"
 mas "Compressor", id: 424390742
 mas "Final Cut Pro", id: 424389933
 mas "Keynote讲演", id: 409183694
